--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
     <header>
         <h1>経済入門-確認テスト</h1>
-           <button id="mode-toggle" class="mode-toggle-button">モード切り替え</button>
+        <nav>
+            
+            <!-- 「解析学資料」リンクの位置を調整 -->
+            <a href="analysis_all_in_one.html" class="mode-toggle-button" style="right: 150px; background-color: rgba(255, 255, 255, 0.3); border-color: rgba(255, 255, 255, 0.4);">解析学資料</a>
+        </nav>
+        <button id="mode-toggle" class="mode-toggle-button">モード切り替え</button>
     </header>
     <main id="quiz-container">
         <div id="quiz-summary">
